# TigerVerse-2026

./: .gitignore  DESIGN.md  README.md  plane.esproj  pyproject.toml  tsconfig.json
.analyzer-output/: analysis-evidence.json  analysis-full.json  visualizer-map.json
Assets/: BoxTemplate.prefab  Color Correction.mat  ImageMaterial.mat  PBR 2.mat  PBR 3.mat  PBR 4.mat  PBR.mat  Physics Filter.filter  Physics Matter.matter  Physics World Settings.worldSettings  Scene.scene  ScreenTexture.screenTexture  TreeNodeData.ts
Assets/Easy Lens/: LensController 2.js
Assets/Scripts/: SquareTap.js.prefab
Assets/Unit Box.lspkg/: Unit_Box__PLACE_IN_SCENE.prefab  package.native
PluginsUserPreferences/: ProjectLocalData.data.yaml  Snap_Plugin_Gui_AssetBrowser_cd11ace2-8507-4965-a068-d85c26031a6b.yaml  Snap_Plugin_Gui_PreviewPanel_52fc2a95-41a3-427b-a138-1e00eb1c405e.yaml  Snap_Plugin_Gui_SceneHierarchyEditor_6778142c-0629-4c2a-afc3-92a65ce29e1a.yaml
Spectacles/Assets/: CityGenerator.js  ConnectionPrefab.prefab  DataPacket.prefab  ImageMaterial 2.mat  ImageMaterial.mat  NodePrefab.prefab  PBR 2.mat  PBR 3.mat  PBR 4.mat  PBR 5.mat  PBR 6.mat  PBR.mat  Physics Filter.filter  Physics Matter.matter  Physics World Settings.worldSettings  Scene.scene  Upper Body Mesh.upperBodyMesh  (+1 more)
json_generation/: layout_graph.py  plot.json  scene_flat.json
tests/: test_agent.py  test_app.py  test_cli.py  test_evidence.py  test_projection.py  test_renderer.py  test_repository.py  test_scene_layout.py  test_validation.py  test_views.py
visualizer_layout_samples/: sample-positioned-scene.json
(+643 files in other folders)
